# windexer

./: .cursor  .gitignore  Cargo.toml  DEMO.md  Makefile  README.md  docker-compose.yml  fix_errors.sh  receiver-keypair.json  rust-toolchain.toml  test-keypair.json  txtx.yml  windexer-geyser-config.json
.cargo/: config.toml
config/geyser/: windexer-geyser-config.json
crates/windexer-api/: Cargo.toml  README.md
crates/windexer-api/src/: account_data_manager.rs  account_endpoints.rs  block_endpoints.rs  endpoints.rs  health.rs  helius.rs  lib.rs  main.rs  metrics.rs  rest.rs  server.rs  solana_client.rs  transaction_data_manager.rs  transaction_endpoints.rs  types.rs
crates/windexer-common/: Cargo.toml  README.md
crates/windexer-common/src/: crypto.rs  errors.rs  helius.rs  lib.rs
crates/windexer-common/src/config/: mod.rs  network.rs  node.rs  store.rs
crates/windexer-common/src/types/: account.rs  block.rs  helius.rs  message.rs  mod.rs  transaction.rs
crates/windexer-common/src/utils/: crypto.rs  mod.rs  slot_status.rs  time.rs  transaction_status.rs
crates/windexer-examples/: Cargo.toml  README.md
crates/windexer-examples/src/: helius.rs  helius_network.rs  indexer.rs  local_gen.rs  local_indexer.rs  local_network.rs  node.rs
crates/windexer-geyser/: Cargo.toml  README.md  build.rs
crates/windexer-geyser/benches/: simd_benchmarks.rs
crates/windexer-geyser/src/: config.rs  init.rs  lib.rs  memory_mapped.rs  metrics.rs  p2p_propagator.rs  plugin.rs  simd_processing.rs  tests.rs  validator_integration.rs
crates/windexer-geyser/src/processor/: account.rs  block.rs  mod.rs  transaction.rs
crates/windexer-geyser/src/publisher/: mod.rs  network.rs  null.rs
crates/windexer-jito-staking/: Cargo.toml
crates/windexer-jito-staking/src/: lib.rs  main.rs  utils.rs
crates/windexer-jito-staking/src/cambrian/: avs.rs  mod.rs  operator.rs  oracle.rs  payload.rs  poa.rs
crates/windexer-jito-staking/src/consensus/: metrics.rs  mod.rs  validator.rs
crates/windexer-jito-staking/src/rewards/: calculation.rs  distribution.rs  mod.rs
crates/windexer-jito-staking/src/slashing/: mod.rs  monitor.rs  penalties.rs
crates/windexer-jito-staking/src/staking/: delegation.rs  mod.rs  types.rs  vault.rs
crates/windexer-metrics/: Cargo.toml
crates/windexer-metrics/src/: lib.rs
crates/windexer-network/: Cargo.toml  README.md
crates/windexer-network/src/: lib.rs  main.rs  metrics.rs
crates/windexer-network/src/consensus/: config.rs  mod.rs  protocol.rs  state.rs  validator.rs
crates/windexer-network/src/gossip/: mesh_manager.rs  message_handler.rs  mod.rs  topic_handler.rs
crates/windexer-network/src/node/: data_fetcher.rs  discovery.rs  keypair.rs  mod.rs  peer.rs
crates/windexer-store/: Cargo.toml
crates/windexer-store/src/: factory.rs  internal.rs  lib.rs  parquet_store.rs  postgres_store.rs  traits.rs
crates/windexer-store/src/db/: mod.rs  postgres.rs  redis.rs
deployment/docker/: Dockerfile.geyser  Dockerfile.node  README.md  api.Dockerfile  backup-deployment.sh  docker-compose.dns.override.yml  docker-compose.helius.override.yml  docker-compose.helius.yml  docker-compose.override.yml  docker-compose.yml  generate-compose.sh  generate-helius-compose.sh  main.rs  run-dns-stack.sh  run-helius-dns.sh  start-docker.sh  start-helius.sh  stop-docker.sh  stop-helius.sh
deployment/docker/config/geyser/: windexer-geyser-config.json
deployment/docker/custom/: Dockerfile.validator
deployment/docker/scripts/: generate-data.sh
deployment/docker/traefik/: traefik.yml
examples/: local_network.rs
examples/analytics/: README.md  analyze_transactions.py  requirements.txt  setup.fish  setup.sh
examples/analytics/assets/: styles.css
examples/camb-avs/: GUIDE.md  README.md  docker-compose.yml
examples/camb-avs/scripts/: setup.sh  start.sh  submit-proposal.sh
examples/cambrian-avs-demo/: Dockerfile.avs  Dockerfile.windexer  README.md  docker-compose.yml
examples/cambrian-avs-demo/configs/: avs-wallet.json  avs_config.toml
examples/cambrian-avs-demo/payloads/: nft.json
examples/cambrian-avs-demo/scripts/: setup.sh  start.sh  stop.sh  submit-proposal.sh
examples/explorer/: package-lock.json  package.json
examples/explorer/app/: page.tsx  types.ts
examples/explorer/app/components/: BlockExplorer.tsx  LoadingSpinner.tsx  MultiIndex.tsx  RaydiumTracker.tsx  TransactionViewer.tsx
examples/python/: deploy-to-azure.sh
examples/typescript/: .gitignore  README-QUERY-DATA.md  README.md  api-endpoints-guide.md  compile.sh  execute-proposal.ts  fix-windexer.md  generate-data.ts  index-realtime-data.ts  package-lock.json  package.json  query-all-data.ts  query-solana.ts  query-windexer.ts  run-avs.ts  simple-tx.ts  tsconfig.json  websocket-subscribe.ts
infra/dev/: main.tf  provider.tf  variables.tf  variables.tfvars
payloads/: basic.js  nft.js
scripts/: cambrian-demo-status.sh  cleanup.sh  demo-interact.sh  docker-start-api.sh  execute-cambrian-proposal.sh  minimal-geyser.sh  run-cambrian-demo.sh  run-ts-examples.sh  setup-windexer-geyser.sh  start-api.sh  start-network.sh  stop-cambrian-demo.sh  test-helius.sh
scripts/test-scripts/: demo-interact.sh  generate-data.sh  run-full-demo.sh  setup-geyser.sh  start-network.sh  stop-network.sh
src/: main.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1739352294325411  MANIFEST-000021
