[workspace]
resolver = "2"
members = [
    "crates/windexer-api",
    "crates/windexer-common",
    "crates/windexer-geyser", 
    "crates/windexer-jito-staking",
    "crates/windexer-network",
    "crates/windexer-store"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vivek <31vivekpal@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Solana dependencies - all aligned to 1.18.26
solana-sdk = "=1.18.26"
solana-program = "=1.18.26"
solana-geyser-plugin-interface = "=1.18.26"
solana-transaction-status = "=1.18.26"
solana-zk-token-sdk = "=1.18.26"
jito-restaking-sdk = "0.0.1"
jito-restaking-core = "0.0.1" 
jito-vault-sdk = "0.0.1"

# Use spl-token-2022 version compatible with Solana 1.18.26
spl-token-2022 = "=1.18.26"
spl-token-2022-zk-token-sdk = "=1.18.26"

# Network stack with older libp2p for compatibility
libp2p = { version = "0.51", features = [
    "tokio",
    "tcp",
    "noise",
    "gossipsub",
    "mdns",
    "yamux",
    "macros"
]}

# Other dependencies remain unchanged
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros"
] }
sha2 = "0.10"
ed25519-dalek = "2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
bincode = "1.3"
thiserror = "2.0.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bytes = "1.5.0"
futures = "0.3.28"
async-trait = "0.1.74"
chrono = "0.4"

[patch.crates-io]
# Only patch what's absolutely necessary
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
