[workspace]
resolver = "2"
members = [
    "crates/windexer-api",
    "crates/windexer-common",
    "crates/windexer-geyser",
    "crates/windexer-jito-staking",
    "crates/windexer-network",
    "crates/windexer-store",
    "crates/windexer-examples"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vivek <31vivekpal@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core Solana Stack
solana-sdk = "=1.16.13"
solana-program = "=1.16.13"
solana-geyser-plugin-interface = "=1.16.13"
solana-transaction-status = "=1.16.13"

# Networking
libp2p = { version = "0.51", features = [
    "tcp", 
    "gossipsub",
    "noise",
    "yamux"
]}

# Essential Utilities
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0.11"
memmap2 = "0.9"
blst = "0.3"
