[workspace]
resolver = "2"
members = [
    "crates/windexer-api",
    "crates/windexer-common",
    "crates/windexer-geyser",
    "crates/windexer-jito-staking",
    "crates/windexer-network",
    "crates/windexer-store",
    "crates/windexer-examples"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vivek <31vivekpal@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
solana-program = "2.2.0"
solana-sdk = "2.2.0"
solana-transaction-status = "2.2.0"
agave-geyser-plugin-interface = "2.2.1"

# System Libraries
libc = "0.2.155"
nix = "0.29.0"
memmap2 = "0.9"
crossbeam-channel = "0.5.12"

# Cryptography
blst = "0.3"
ed25519-dalek = { git = "https://github.com/solana-labs/solana", branch = "master" }
sha2 = "0.10"

# Networking
libp2p = { version = "0.55", features = ["tcp", "gossipsub", "noise", "yamux"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"] }
bytes = "1.5.0"
futures = "0.3.28"
async-trait = "0.1.74"

# Database
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros"
]}

# Utilities
anyhow = "1.0.75"
thiserror = "2.0.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bincode = "1.3"
hex = "0.4.3"
chrono = "0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave", branch = "v2.2" }