[package]
name = "windexer-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
windexer-common = { path = "../windexer-common" }
windexer-store = { path = "../windexer-store" }

# API dependencies
tonic = "0.12.3"
prost = "0.13.5"
tower = "0.5.2"
axum = "0.8.1"
tokio-tungstenite = "0.26.2"

# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true