[package]
name = "windexer-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "windexer-api"
path = "src/main.rs"

[dependencies]
windexer-common = { path = "../windexer-common" }
windexer-store = { path = "../windexer-store", optional = true }

# API dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = { version = "0.21.0", optional = true }
thiserror = "2.0"
reqwest = { version = "0.11.24", features = ["json"] }
chrono = "0.4"
dotenv = { version = "0.15.0", optional = true }
clap = { version = "4.4.18", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.1.0", features = ["server"] }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json = "1.0"

# Utilities
futures = "0.3"
fastrand = "2.0"

# WebSocket and async
tokio-stream = "0.1"

[features]
default = []
cli = ["clap", "dotenv"]
store = ["windexer-store"]
websocket = ["tokio-tungstenite"]

[dev-dependencies]
rand = "0.8"