[package]
name = "windexer-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agave-geyser-plugin-interface.workspace = true

solana-program.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11.12"
bincode.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

tracing.workspace = true
log.workspace = true

chrono.workspace = true
sha2.workspace = true

bytes.workspace = true
bs58 = "0.5"
