[package]
name = "windexer-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agave-geyser-plugin-interface.workspace = true

solana-program.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11.12"
bincode.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
futures-util = "0.3"

tracing.workspace = true
log.workspace = true

chrono.workspace = true
sha2.workspace = true

bytes.workspace = true
bs58 = "0.5"
base64 = "0.13"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
