[package]
name = "windexer-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "node"
path = "src/node.rs"

[dependencies]
# Internal dependencies
windexer-common = { path = "../windexer-common" }
windexer-network = { path = "../windexer-network" }
windexer-jito-staking = { path = "../windexer-jito-staking" }

# External dependencies
clap = { version = "4.0", features = ["derive"] }
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

# Workspace dependencies
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
solana-sdk.workspace = true

ctrlc = "3.4"
