[package]
name = "windexer-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "indexer"
path = "src/indexer.rs"

[dependencies]
# Internal dependencies
windexer-common = { path = "../windexer-common" }
windexer-network = { path = "../windexer-network" }
windexer-jito-staking = { path = "../windexer-jito-staking" }
windexer-store = { path = "../windexer-store" }

# Solana
solana-sdk.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.3.0", features = ["derive"] }

# Networking
ctrlc = "3.4.0"

# External dependencies
warp = "0.3"
serde_json = "1.0"
