[package]
name = "windexer-geyser"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
simd = ["packed_simd", "stdsimd"]

[dependencies]
# Internal Components
windexer-common = { path = "../windexer-common" }
windexer-network = { path = "../windexer-network" }

# Solana Core
solana-geyser-plugin-interface = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-transaction-status = { workspace = true }

# System Libraries
nix = "0.29.0"
libc = "0.2.155"
crossbeam-channel = "0.5.12"

# SIMD Optimization
packed_simd = { version = "0.3.9", optional = true }
stdsimd = { version = "0.1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
userfaultfd = "0.8.1"

[build-dependencies]
cc = "1.0.90"
