[package]
name = "windexer-geyser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal dependencies
windexer-common = { path = "../windexer-common" }
windexer-network = { path = "../windexer-network" }

# Agave dependencies
agave-geyser-plugin-interface.workspace = true
solana-transaction-status.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true

# Core functionality
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Networking
tokio.workspace = true
futures.workspace = true
libp2p.workspace = true
bytes.workspace = true
async-trait.workspace = true

# System
memmap2.workspace = true
crossbeam-channel.workspace = true
nix.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cc = "1.0.79"

[[bench]]
name = "simd_benchmarks"
harness = false
