[package]
name = "windexer-geyser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "windexer_geyser"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Solana dependencies
agave-geyser-plugin-interface = "2.2.1"
solana-sdk = "2.2.0"
solana-transaction-status = "2.2.0"
solana-program = "2.2.0"

# Utility libraries
anyhow = "1.0.75"
thiserror = "2.0.11"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_bytes = "0.11.12"
bincode = "1.3.3"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4"
memmap2 = "0.9"
crossbeam-channel = "0.5.12"
futures = "0.3.28"
async-trait = "0.1.74"
num_cpus = "1.16"
chrono = "0.4"
dashmap = "6.1.0"
rayon = "1.8"
bytes = "1.5.0"

# Networking dependencies
libp2p = { version = "0.55", features = ["tcp", "gossipsub", "noise", "yamux"] }

# Internal crates
windexer-common = { path = "../windexer-common" }
windexer-network = { path = "../windexer-network" }

# Add bs58 here
bs58 = "0.4.0"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13.1"
rand = "0.9.0"

[build-dependencies]
rustc_version = "0.4"