[package]
name = "windexer-jito-staking"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
# Internal crates
windexer-common = { path = "../windexer-common" }

# Solana dependencies
solana-sdk = { workspace = true }
solana-program = { workspace = true }

# Async runtime and utilities
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling and logging
anyhow = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

[lib]
name = "windexer_jito_staking"
path = "src/lib.rs"

[[bin]]
name = "windexer-jito-staking"
path = "src/main.rs"