[package]
name = "windexer-jito-staking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
windexer-common = { path = "../windexer-common" }

# Agave dependencies
solana-sdk.workspace = true
solana-program.workspace = true

# Async
tokio.workspace = true
async-trait = "0.1"
futures = "0.3"

# Utilities
anyhow.workspace = true
thiserror = "2.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = "0.4"
clap = { version = "4.4.18", features = ["derive"] }

# Cambrian Dependencies
borsh = "1.5.7"
anchor-lang = "0.31.0"

hyper = { version = "0.14", features = ["full"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "windexer_jito_staking"
path = "src/lib.rs"

[[bin]]
name = "windexer-jito-staking"
path = "src/main.rs"

[[bin]]
name = "windexer-avs"
path = "src/bin/avs.rs"
