[package]
name = "windexer-network"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
# Internal crates
windexer-common = { path = "../windexer-common" }

# Network dependencies
libp2p = { version = "0.55.0", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "gossipsub",
    "mdns",
    "yamux",
    "macros"
]}
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0.11"  # Changed from 2.0.11 for compatibility
tracing = "0.1"
tracing-subscriber = { workspace = true }

# Solana SDK
solana-sdk = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"