[package]
name = "windexer-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
windexer-common = { path = "../windexer-common" }
windexer-jito-staking = { path = "../windexer-jito-staking" }

# Networking
libp2p = { version = "0.55", features = ["tokio", "tcp", "dns", "noise", "gossipsub", "mdns", "yamux", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Utilities
anyhow = "1.0"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber.workspace = true

# Solana SDK
solana-sdk.workspace = true

# Add this in the dependencies section
hex = "0.4.3"

# Make sure clap is in dependencies
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "windexer-network"
path = "src/main.rs"
