[package]
name = "windexer-store"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
# Internal crates
windexer-common = { path = "../windexer-common" }
windexer-geyser = { path = "../windexer-geyser" }

# Database dependencies
rocksdb = "0.21"
num_cpus = "1.16"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "json"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }

# Parquet dependencies
arrow = { version = "40.0", features = ["prettyprint"] }
parquet = { version = "40.0", features = ["arrow"] } 
chrono = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
